finalProject/kubernetes/prod/app-prod-deployment-FastAPI.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-prod-deployment-fastapi
  labels:
    app: fastapi-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-prod
  template:
    metadata:
      labels:
        app: fastapi-prod
    spec:
      containers:
        - name: fastapi
          image: pressleywelsh/final-project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          command:
            ["uv", "run", "--", "fastapi", "dev", "--host","0.0.0.0", "--port", "5000","src/FastAPI.py"]
