finalProject/kubernetes/prod/app-prod-deployment-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-prod-deployment-worker
  labels:
    app: worker-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-prod
  template:
    metadata:
      labels:
        app: worker-prod
    spec:
      containers:
        - name: worker
          image: pressleywelsh/final-project:latest
          imagePullPolicy: Always
          command: ["uv", "run", "python", "src/worker.py"]
