finalProject/kubernetes/prod/app-prod-service-FastAPI.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-prod-service-fastapi
spec:
  type: ClusterIP
  selector:
    app: fastapi-prod
  ports:
    - name: fastapi-prod
      port: 5000
      targetPort: 5000
