finalProject/kubernetes/prod/app-prod-service-nodeport-FastAPI.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-prod-service-nodeport-fastapi
spec:
  type: NodePort
  selector:
    app: fastapi-prod
  ports:
    - port: 5000
      targetPort: 5000
