finalProject/kubernetes/prod/app-prod-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-prod-service-redis
spec:
  type: ClusterIP
  selector:
    app: redis-prod
  ports:
    - port: 6379
      targetPort: 6379
