finalProject/kubernetes/prod/app-prod-ingress-FastAPI.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-prod-ingress-fastapi
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: pressleywelsh524.coe332.tacc.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-prod-service-nodeport-fastapi
                port:
                  number: 5000
